added a message base and updated interface

--- a/app/views/rooms.ejs
+++ b/app/views/rooms.ejs
@@ -5,21 +5,19 @@
   <meta charset="UTF-8">
   <title>Own Local Chat</title>
   <link rel="stylesheet" href="/css/style.css">
+  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </head>
 
 <body>
   <div class="wrapper">
     <div class="container clearfix" style="width: 500px; margin: 2% auto;">
-      <div class="controls" style="border: none; width: 100%;">
+      <div class="controls" style="justify-content: space-between;">
         <div class="top_home">
           <div class="home_about">
-            OLChat
+            <a href="/login">OLChat</a>
           </div>
         </div>
-        <div class="search">
-          <input type="text" placeholder="search" />
-        </div>
-        <a href="/logout" class="logout-btn" style="margin: 0; width: auto;">Logout</a>
+        <a href="/logout" class="logout-btn" style="max-width: 100px;">Logout</a>
       </div>
 
       <div class="room" style="width: 100%;">
