--- a/app/views/chatroom.ejs
+++ b/app/views/chatroom.ejs
@@ -3,14 +3,29 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Chat IO</title>
+    <title>Own Local Chat</title>
     <link rel="stylesheet" href="/css/style.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </head>
 
 <body>
     <div class="wrapper">
-        <div class="container clearfix">
+        <div class="container-chatroom clearfix">
+            <div class="people-list" id="people-list">
+                <div class="search">
+                    <input type="text" placeholder="search" />
+                    <i class="fa fa-search"></i>
+                </div>
+                <div class="users-list">
+                    <ul class="list">
+                    </ul>
+                </div>
+            </div>
             <div class="chat">
+                <div class="controls">
+                    <a href="/rooms" class="rooms-btn">Rooms</a>
+                    <a href="/logout" class="logout-btn">Logout</a>
+                </div>
                 <div class="chat-header clearfix">
                     <img src="<%= user.picture %>" alt="avatar">
                     <div class="chat-about">
@@ -35,20 +50,8 @@
                 </div>
                 <!-- end chat-message -->
             </div>
-            <!-- end chat -->
-
-            <div class="controls">
-                <a href="/logout" class="logout-btn">Logout</a>
-                <a href="/rooms" class="rooms-btn">Rooms</a>
-            </div>
-
-            <div class="users-list">
-                <ul class="list">
-                </ul>
-            </div>
         </div>
     </div>
-    <!-- end container -->
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/main.js"></script>
