--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,7 +49,9 @@ body :-ms-input-placeholder {
     background: linear-gradient(to bottom right, #50a3a2 0%, #53e3a6 100%);
     position: absolute;
     width: 100%;
-    height: 100%;
+    padding: 20px 0;
+    min-height: 100vh;
+    /* height: 100%; */
     overflow: hidden;
 }
 
@@ -95,7 +97,8 @@ form {
 }
 
 form input,
-.room-create input {
+.room-create input,
+.room-item {
     -webkit-appearance: none;
     -moz-appearance: none;
     outline: 0;
@@ -115,21 +118,20 @@ form input,
 }
 
 form input:hover,
-.controls a,
-.room-create input:hover {
+.room-create input:hover,
+.room-item:hover {
     background-color: rgba(255, 255, 255, 0.4);
 }
 
 form input:focus,
-.controls a,
-.room-create input:focus {
+.room-create input:focus,
+.room-item:focus {
     background-color: white;
     width: 300px;
     color: #53e3a6;
 }
 
 form button,
-.controls a,
 .room-create button {
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -148,7 +150,6 @@ form button,
 }
 
 form button:hover,
-.controls:hover a,
 .room-create:hover button {
     background-color: #f5f7f9;
 }
@@ -170,34 +171,318 @@ form button:hover,
 }
 
 .controls {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -ms-flex-line-pack: center;
+    align-content: center;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    max-width: 1200px;
+    margin: 0 auto;
     background-color: rgba(255, 255, 255, 0.2);
-    width: 270px;
-    float: left;
-    margin: 0;
-    text-align: center;
-    border-bottom: 2px solid white;
-    border-radius: 3px;
-    -moz-columns: 3;
-    -webkit-columns: 3;
-    columns: 20px 3;
-    margin-bottom: 20px;
-}
-
-.top_home {
-    font-size: 24px;
-}
-
-.controls a {
-    float: right;
-    outline: 0;
-    cursor: pointer;
-    text-decoration: none;
 }
 
 .room-about {
+    padding: 5px;
+    margin: 10px 0;
+}
+
+ul {
+    list-style: none;
+}
+
+.room-list {
+    color: white;
+    padding: 12px 14px;
+    line-height: 26px;
+    font-size: 20px;
+    border-radius: 7px;
+    margin-bottom: 10px;
+    position: relative;
+    cursor: pointer;
+    text-align: center;
+}
+
+.room-list a {
+    text-decoration: none;
+}
+
+.people-list {
+    width: 260px;
+    float: left;
+}
+
+.people-list .search {
+    padding: 20px;
+}
+
+.people-list input,
+.controls input {
+    border-radius: 3px;
+    border: none;
+    padding: 14px;
+    color: white;
+    background: #6ab6a7;
+    width: 90%;
+    font-size: 14px;
+}
+
+.people-list {
+    position: relative;
+}
+
+.users-list ul {
+    padding: 20px
+}
+
+.users-list ul li {
+    padding-bottom: 20px;
+}
+
+.people-list img {
+    float: left;
+    width: 30%;
+}
+
+.people-list .about {
+    float: left;
+    margin-top: 8px;
+}
+
+.people-list .about {
+    padding-left: 8px;
+}
+
+.people-list .status {
+    color: #0fcf71;
+}
+
+.chat {
+    width: 490px;
+    float: left;
+    background: #F2F5F8;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    color: #434651;
+}
+
+.chat .chat-header {
+    padding: 20px;
+    border-bottom: 2px solid white;
+}
+
+.chat .chat-header img {
+    float: left;
+    width: 30%;
+}
+
+.chat .chat-header .chat-about {
     float: left;
     padding-left: 10px;
     margin-top: 6px;
+}
+
+.chat .chat-header .chat-room {
+    font-weight: bold;
+    font-size: 16px;
+}
+
+.chat .chat-header .chat-num-messages {
+    color: #92959E;
+}
+
+.chat .chat-header .fa-users {
+    float: right;
+    color: #D8DADF;
+    font-size: 20px;
+    margin-top: 12px;
+}
+
+.chat .chat-history {
+    padding: 30px 30px 20px;
+    border-bottom: 2px solid white;
+    overflow-y: scroll;
+    height: 32vh;
+}
+
+.chat .chat-history .message-data {
+    margin-bottom: 15px;
+}
+
+.chat .chat-history .message-data-time {
+    color: #a8aab1;
+    padding-left: 6px;
+}
+
+.chat .chat-history .message {
+    color: white;
+    padding: 10px 20px;
+    line-height: 26px;
+    font-size: 16px;
+    border-radius: 7px;
+    margin-bottom: 30px;
+    width: 90%;
+    position: relative;
+}
+
+.container-chatroom {
+    overflow: hidden;
+    -webkit-box-shadow: 0 5px 30px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 5px 30px rgba(0, 0, 0, 0.2);
+    background: rgba(0, 0, 0, 0.5);
+    border-radius: 20px;
+    margin: 0 auto;
+    width: 750px;
+}
+
+.chat .chat-history .message:after {
+    bottom: 100%;
+    left: 7%;
+    border: solid transparent;
+    content: " ";
+    height: 0;
+    width: 0;
+    position: absolute;
+    pointer-events: none;
+    border-bottom-color: #9fe389;
+    border-width: 10px;
+    margin-left: -10px;
+}
+
+.chat .chat-history .my-message {
+    background: #9fe389;
+}
+
+.chat .chat-history .other-message {
+    background: #94C2ED;
+}
+
+.chat .chat-history .other-message:after {
+    border-bottom-color: #94C2ED;
+    left: 93%;
+}
+
+.chat .chat-message {
+    padding: 30px;
+}
+
+.chat .chat-message textarea {
+    width: 100%;
+    border: none;
+    padding: 10px 20px;
+    font: 14px/22px "Lato", Arial, sans-serif;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    resize: none;
+}
+
+.chat .chat-message .fa-file-o,
+.chat .chat-message .fa-file-image-o {
+    font-size: 16px;
+    color: gray;
+    cursor: pointer;
+}
+
+.chat .chat-message button {
+    float: right;
+    color: #94C2ED;
+    font-size: 16px;
+    text-transform: uppercase;
+    border: none;
+    cursor: pointer;
+    font-weight: bold;
+    background: #F2F5F8;
+}
+
+.chat .chat-message button:hover {
+    color: #75b1e8;
+}
+
+.fa-search {
+    position: relative;
+    left: -25px;
+}
+
+.chat-history::-webkit-scrollbar {
+    width: 1em;
+}
+
+.chat-history::-webkit-scrollbar-thumb {
+    background-color: #94C2ED;
+    outline: 1px solid #94C2ED;
+}
+
+.controls .logout-btn,
+.controls .rooms-btn {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    margin: 7px;
+    padding: 10px;
+    text-align: center;
+    text-transform: uppercase;
+    position: relative;
+    overflow: hidden;
+    -webkit-transition: .3s;
+    transition: .3s;
+    text-decoration: none;
+    outline: 0;
+    background-color: white;
+    border: 0;
+    color: #53e3a6;
+    border-radius: 3px;
+    cursor: pointer;
+    font-size: 18px;
+    -webkit-transition-duration: 0.25s;
+    transition-duration: 0.25s;
+}
+
+.controls .logout-btn:hover,
+.controls .rooms-btn:hover {
+    color: #5bcaff;
+}
+
+.controls .logout-btn:hover:after,
+.controls .rooms-btn:hover:after {
+    left: -10%;
+    width: 120%;
+}
+
+.controls .logout-btn:hover {
+    color: white;
+    background: #f0a89e;
+}
+
+.controls .rooms-btn:hover {
+    color: white;
+    background: #b0e89e;
+}
+
+.top_home {
+    margin: 0 20px;
+    width: 165px;
+    height: 42px;
+    display: block;
+}
+
+.home_about {
+    height: 22px;
+    width: 65px;
+    margin: 8px 10px 0 0;
+}
+
+.home_about a {
+    text-decoration: none;
+    color: #53e3a6;
+    font-size: 1.3em;
+    font-weight: bold;
 }
 
 .bg-bubbles {
